      data.
      
    - Fixed Bug#46925 - Suspendable XA connections were not pinned to the XID for the global transaction, leading
      to failure when attempting to suspend/resume/commit from different logical XA connections.
      
    - Fixed Bug#44508 - DatabaseMetadata.getSuperTypes() returns result set with incorrect column names.
      
07-16-09 - Version 5.1.8
    - Fixed BUG#44588 - Fixed error message for connection exceptions when
      streaming result sets are used.
      
    - Modified/fixed test cases using UnreliableSocketFactory.

    - Fixed BUG#43421 - Made doPing() global blacklist-aware, so that it does not
      throw Exceptions when at least a single load-balanced server is available.

    - Fixed BUG#43071 - Specifying ASCII encoding for converting seed String to
      byte array; allowing system default encoding to be used causes auth failures
      on EBCDIC platforms.

    - Fixed BUG#43070 - traceProtocol parameter isn't configured early enough to
      capture handshake protocol.

    - Fixed BUG#41161 - PreparedStatement.addBatch() doesn't check for all parameters
      being set, which leads to a NullPointerException when calling executeBatch() and
      rewriting batched statements into multi-value or multi-statement statements.

    - Fixed BUG#42055 - ConcurrentModificationException possible when removing items
      from global blacklist.
      
    - Fixed Bug #42309 - Statement.getGeneratedKeys() returns 2 keys when
      using ON DUPLICATE KEY UPDATE
      
    - Fixed some quoting of substituted parameter issues in localized error messages.
    
    - Added a version check around getting the variable 'auto_increment_increment' for
      servers < 5.0.2, which quiets down a warning message that the driver would log
      when connecting to MySQL-4.1 or older.
      
    - The driver will automatically disable elideSetAutoCommit and useLocalTransactionState